# slau

./: CMakeLists.json  CMakeLists.txt
src/: CMakeLists.txt  CSRMatrix.cpp  CSRMatrix.hpp  DenseMatrix.cpp  DenseMatrix.hpp  HouseholderQR.cpp  HouseholderQR.hpp  a  a.out  benchmark  benchmark.cpp  fixedpoint_tau_0.010000.csv  gauss_seidel.csv  jacobi.csv  main.cpp  random.cpp  solvers.cpp  solvers.hpp  tools.cpp  tools.hpp
tests/: CMakeLists.txt  test_Householder.cpp  test_solvers.cpp
